
  Note that the return value of CreateFeature() is an OGRErr code and not
  a feature id as was the case with the MITAB 1.x SetFeature() implementation.
  The feature id of the created feature is returned by updating the id of the
  passed in feature instead of through the return value of the method as
  was the case with the old SetFeature() method in MITAB 1.x.

- Added Krovak projection suppoprt (bug 2230)

- Fixed bad feature count after we deleted a feature in MapInfo (bug 2227)

- Fixed MIF driver: doesn't create a layer defn at layer creation (bug 2180)

- Fixed error issued when reading empty TAB with spatial index active (bug 2136)

- Added support to handle duplicate field names (bug 2141)

- Added validation to check if a field name start with a number, which is 
  an invalid according to MapInfo (bug 2141)

- Added functions to get the file version (API and C API) (bug 1961)

- Fixed Overflow of FIDs in Seamless tables (bug 2015)

- C API: Added mitab_c_set_charset() (bug 2013)

- Fixed SetTextSpacing call in mitab_c_set_text_display() method (bug 1986)

- Fixed wrong return value of IMapInfoFile::SetCharset() method (bug 1987)

- Added Visual Studio Project files in contrib/vcproj, contributed by 
  Tony Wells (bug 1877)

- Updated contrib/mitab_dyn.pas and contrib/mitab.vb for V1.7.0 changes

- Fixed const char * warnings with GCC 4.3 (GDAL ticket #2325)

- Fixed problem with corrupt pointer if file not found (bug 1899)

- Fixed tabdump build problem if DEBUG option not provided (bug 1898)

- Fixed deprecated warnings generated by mitab.h (bug 1907)

- Fixed multi-line text rendering (bug 1916) 

- Fixed multi-line text height problem (bug 1919)

- Fixed the text font size problem  (bug 1918)

- Add text outline color support (halo background in MapInfo) (bug 1921)

- Add font text styles support (bold, italic, etc.) (bug 1922)

- Added Font Point styles support (halo, border) (bug 1925)
 
- C API: Added mitab_c_get_feature_count_by_type() (bug 1952)